<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical">

    <RelativeLayout
        android:id="@+id/fragment_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252627"
        android:padding="20dp"
        tools:context="UserFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_alignParentTop="true"
            android:text="@string/settings"
            android:fontFamily="@font/open_sans"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/settings_icon"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/imageView"
            android:layout_below="@+id/title"
            android:contentDescription="Settings" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                app:startIconDrawable="@drawable/user_icon"
                app:errorEnabled="true"
                app:errorTextColor="@color/design_default_color_error"
                android:layout_below="@+id/imageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            app:startIconDrawable="@drawable/weight_icon"
            android:layout_below="@+id/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_weight_kg"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/height_icon2"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            android:layout_below="@+id/weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_height_cm"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/age_icon"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            android:layout_below="@+id/height">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_age"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/water_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/waterdrop_icon"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            android:layout_below="@+id/age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/water_goalET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_water_goal_ml"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/step_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/footstep_icon"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            android:layout_below="@+id/water_goal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/step_goalET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_step_goal"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>